# beginner_tutorials

./: .gitignore  LICENSE  README.md
cpp_pubsub/: package.xml
results/: cppcheck.txt  cpplint.txt  frames_2023-11-19_12.06.11.gv
results/rosbag2_2023_11_20-14_59_06/: metadata.yaml  rosbag2_2023_11_20-14_59_06_0.db3
src/cpp_pubsub/: CMakeLists.txt  package.xml
src/cpp_pubsub/launch/: launch.py  launch.yaml  rosbag_launch.py
src/cpp_pubsub/src/: change_output.cpp  publisher_member_function.cpp  subscriber_member_function.cpp
src/cpp_pubsub/srv/: ModOutput.srv
src/cpp_pubsub/test/: integration_test.cpp
