<?xml version="1.0"?>
<?xml-models-1.0 http://download.ros.org/schema/package_format/package-3.0.xsd?>

<package format="3">
  <name>cpp_pubsub</name>
  <version>0.0.0</version>
  <description>ROS 2 package for publisher and subscriber nodes</description>
  <maintainer email="darshit@umd.edu">Darshit Miteshkumar Desai</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <depend>geometry_msgs</depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
